--- a/Projector.html
+++ b/Projector.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0.5">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         <title>Projectors </title>
-        <link rel="stylesheet" href="./css/projector.css">
-        <script src="./JS/projector.js"></script>
+        <link rel="stylesheet" href="css/projector.css">
+        <script src="projector.js"></script>
     </head>
     <body>
         <header class="header">
@@ -39,7 +39,7 @@
               <li><a href="#"><svg width="30" height="30" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
                 <path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" d="M3 2.5h8a1 1 0 0 1 1 1V10h0H2h0V3.5a1 1 0 0 1 1-1ZM.5 10h13M7 2.5v-2M5.5 10L3 13.5M8.5 10l2.5 3.5"/>
             </svg> &nbsp; Smart Classroom  </a></li>
-            <li><a href="#"><img src="./image/icons8-meeting-room-50 (2).png" class="con" >&nbsp; AV Conference Room Solution</a></li>
+            <li><a href="#"><img src="image/icons8-meeting-room-50 (2).png" class="con" >&nbsp; AV Conference Room Solution</a></li>
                     </ul>
               
                 </li>
@@ -75,7 +75,7 @@
         <div class="pro_container">
             <div class="card">
                 <div class="card-image">
-                    <img src="./image/Home_theatre/projector/epson_ tw_7100.1.png" alt="EPSON TW 71000">
+                    <img src="image/Home_theatre/projector/epson_ tw_7100.1.png" alt="EPSON TW 71000">
                 </div>
                 <div class="card-content">
                     <div class="card-title">EPSON TW 7100</div>
@@ -85,7 +85,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="./image/Home_theatre/projector/epson_e01.1.png" alt="EPSON E 01">
+                    <img src="image/Home_theatre/projector/epson_e01.1.png" alt="EPSON E 01">
                 </div>
                 <div class="card-content">
                     <div class="card-title">EPSON EB 01</div>
@@ -96,7 +96,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="./image/Home_theatre/projector/epson_fh06.1.png" alt="EPSON FH 06">
+                    <img src="image/Home_theatre/projector/epson_fh06.1.png" alt="EPSON FH 06">
                 </div>
                 <div class="card-content">
                     <div class="card-title">EPSON FH 06</div>
@@ -107,7 +107,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="./image/Home_theatre/projector/epson_tw_6250.1.png" alt="EPSON TW 6250">
+                    <img src="image/Home_theatre/projector/epson_tw_6250.1.png" alt="EPSON TW 6250">
                 </div>
                 <div class="card-content">
                     <div class="card-title">EPSON TW 6250</div>
@@ -118,7 +118,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="./image/Home_theatre/projector/epson_tw_750.1.png" alt="EPSON TW 750">
+                    <img src="image/Home_theatre/projector/epson_tw_750.1.png" alt="EPSON TW 750">
                 </div>
                 <div class="card-content">
                     <div class="card-title">EPSON TW 750</div>
@@ -129,7 +129,7 @@
             </div>
             <div class="card">
                 <div class="card-image">
-                    <img src="./image/Home_theatre/projector/epson_tw_9400.1.png" alt="EPSON TW 9400">
+                    <img src="image/Home_theatre/projector/epson_tw_9400.1.png" alt="EPSON TW 9400">
                 </div>
                 <div class="card-content">
                     <div class="card-title">EPSON TW 9400</div>
