--- a/Speaker.html
+++ b/Speaker.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0.5">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/projector.css">
-    <script src="./JS/projector.js"></script>
+    <link rel="stylesheet" href="css/projector.css">
+    <script src="projector.js"></script>
     <title>Sound System</title>
 </head>
 <body>
