--- a/cctv.html
+++ b/cctv.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/cctv.css">
-  <script src="./JS/cctv.js"></script>
+  <script src="cctv.js"></script>
   <title>Sound Vision Technologies</title>
 </head>
 <body>
