--- a/mics.html
+++ b/mics.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0.5">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/mixer.css">
-  <script src="./JS/mixer.js"></script>
+  <script src="mixer.js"></script>
   <title>Mics | SVT</title>
 </head>
 <body>
