--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="#">Services</a>
+        <li><a href="#">Products</a>
           <ul>
             <li><a href="cctv.html"><svg width="30" height="30" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path  fill="#fff" d="M20.916 9.564a.998.998 0 0 0-.513-1.316L7.328 2.492c-.995-.438-2.22.051-2.645 1.042l-2.21 5.154a2.001 2.001 0 0 0 1.052 2.624L9.563 13.9L8.323 17H4v-3H2v8h2v-3h4.323c.823 0 1.552-.494 1.856-1.258l1.222-3.054l5.205 2.23a1 1 0 0 0 1.31-.517l.312-.71l1.701.68l2-5l-1.536-.613zm-4.434 5.126L4.313 9.475l2.208-5.152l12.162 5.354z"/>
@@ -69,14 +69,14 @@
         <div class="testimonial-box">
           <div class="box-top">
             <div class="our-moto">
-             <p> Our mission is to revolutionize industries and empower businesses through cutting-edge technology solutions and exceptional services. </p>
+             <p> Our mission is to revolutionize industries and empower businesses through cutting-edge technology solutions and exceptional products. </p>
             </div>
           </div>
         </div>
         <div class="testimonial-box">
           <div class="box-top">
             <div class="our-moto">
-             <p> We are dedicated to delivering innovative products and services that enhance productivity, streamline processes, and drive growth for our clients. </p>
+             <p> We are dedicated to delivering innovative products and products that enhance productivity, streamline processes, and drive growth for our clients. </p>
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
     </section></center>
     <div class="pro-container">
 
-      <h1 class="pro-heading">Our services</h1>
+      <h1 class="pro-heading">Our products</h1>
   
       <div class="pro-box-container">
         <a href="cctv.html">
@@ -293,7 +293,7 @@
   <div class="footer-right">
       <p class="footer-company-about">
           <span>About the company</span>
-          <strong>Sound Vision technologies</strong> Established in 2021, is a leading AV Industries service provider, known for innovative solutions and client satisfaction. With a commitment to excellence, the company plans to expand services and embrace emerging technologies, maintaining its trusted position in the market.
+          <strong>Sound Vision technologies</strong> Established in 2021, is a leading AV Industries service provider, known for innovative solutions and client satisfaction. With a commitment to excellence, the company plans to expand products and embrace emerging technologies, maintaining its trusted position in the market.
       </p>
      
   </div>
