--- a/pa_speakers.html
+++ b/pa_speakers.html
@@ -219,5 +219,42 @@
             </div>
         </div>
     </div>
+    <footer class="footer-distributed">
+        <div class="footer-left">
+            <h4>Sound Vision<span>Technologies</span></h4>
+            <p class="footer-links">
+                <a href="index.html">Home</a>
+                |
+                <a href="about.html">About Us</a>
+                |
+                <a href="#">Contact</a>
+                |  
+                <a href="#">Gallery</a>
+            </p>
+
+            <p class="footer-company-name">Copyright © 2021 <strong>Sound Vision Technologies</strong> All rights reserved</p>
+        </div>
+
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>Ahmedabad</span>Naroda</p>
+            </div>
+            <div>
+            <i class="fa fa-phone" ></i>
+                <p><a href="tel:+918238009399" class="cll">+91 82380 09399</a></p><br>
+            </div>
+            <div>
+                <i class="fa fa-envelope" id="mail"></i>
+                <p id="email"><a href="mailto:soundvisiontechnologies@gmail.com">soundvisiontechnologies@gmail.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>About the company</span>
+                <strong>Sound Vision technologies</strong> Established in 2021, is a leading AV Industries service provider, known for innovative solutions and client satisfaction. With a commitment to excellence, the company plans to expand products and embrace emerging technologies, maintaining its trusted position in the market.
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
